adding clarity on introduction, defining jargon-y terms

--- a/index.Rmd
+++ b/index.Rmd
@@ -51,14 +51,19 @@ At a high level, in this book, readers will learn how to
 (1) use reproducible tools to do data analysis and 
 (2) identify and solve common problems in data science. 
 
-The book is structured, so learners spend the first four chapters learning how 
-to use the R programming language [@Rlanguage] to load, wrangle, clean, and visualize data
-while answering descriptive and exploratory data analysis questions. The next
+One of the high-level goals of this book is using "reproducible tools to do
+analysis." In other words, we want to teach you how to do an analysis where
+someone else can easily reproduce the results of your analysis. Why is
+reproducibility necessary? It allows someone else to double-check and validate
+your work and creates transparency! We will use a programming language called R 
+[@Rlanguage]  as our reproducible tool to help us do data analysis. You will
+spend the first four chapters learning how to use the R to load, clean, wrangle
+(i.e. restructure the data, so it's in a useable format) and visualize data while
+answering descriptive and exploratory data analysis questions. The next
 six chapters illustrate how to answer
 predictive, exploratory and inferential data analysis questions with common methods
 in data science, including classification, regression, clustering and estimation.
-In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), 
-we discuss how to use Jupyter to edit and write R code, how to use version control for collaboration, and how to install and configure the software needed for data science on your own computer. Readers 
+In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), we discuss how to edit and write R code with Jupyter (another reproducible tool), use version control for collaboration, and install and configure the software needed for data science on your own computer. Readers 
 may want to refer to these chapters earlier as they start exploring the examples 
 and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
@@ -76,7 +81,7 @@ The four common data science methods that are useful for answering predictive, e
 
 4. **Estimation: make a good guess of an average or a proportion for the wider population from a representative sample (group of people or units), and quantify how good that guess is.** This could answer a question such as what is the proportion of undergraduate students that own an iPhone?
 
-We map each of these methods to the broader data analysis question, listed in Table \@ref(tab:questions-table), they help answer and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced data analysis questions in Table \@ref(tab:questions-table) (*e.g.,* causal or mechanistic) are beyond the scope of this book.
+We map each of these methods to the broader data analysis question, listed in Table \@ref(tab:questions-table), they help answer and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. Causal or mechanistic questions in Table \@ref(tab:questions-table) are beyond the scope of this book.
 
 
 Table: (\#tab:questions-table) Types of data analysis questions
