--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(message = FALSE)
 In this chapter, you’ll learn to read spreadsheet-like data of various formats into R from your local device and the web. “Reading” (or “loading”) is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a data frame) that R can easily access and manipulate. Thus reading data is the gateway to any data analysis; you won’t be able to analyze data unless you’ve loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. The more time you spend upfront matching the data reading method to the type of data you have, the less time you will have to devote to re-formatting, cleaning and wrangling your data (the second step to all data analyses). It’s like making sure your shoelaces are tied well before going for a run so that you don’t trip later on!
 
 ## Chapter learning objectives
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 - define the following:
     - absolute file path
