changing student to reader

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -23,7 +23,7 @@ in a standard data science project.
 
 ## Chapter learning objectives
 
-By the end of the chapter, students will be able to:
+By the end of the chapter, readers will be able to:
 
 - Describe what version control is 
 and why data analysis projects can benefit from it
