minor change to writing

--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -17,7 +17,7 @@ This chapter will also introduce how to use
 the two most common version control tools: Git for local version control, 
 and GitHub for remote version control. 
 There are many user interfaces for using Git, 
-here will will focus on how to use the Jupyter Git interface. 
+here we will focus on how to use the Jupyter Git interface. 
 We will focus on the most common version control operations used day-to-day 
 in a standard data science project. 
 
@@ -43,8 +43,8 @@ collaboration, specifically to:
 ## What is version control, and why should I use it?
 
 Data analysis projects often require iteration 
-and revision to move from an initial idea to a finished product 
-that is ready for the intended audience. 
+and revision to move from an initial idea to a finished product
+ready for the intended audience. 
 Without deliberate and conscious effort towards tracking changes 
 made to the analysis, projects tend to become messy. This mess can include 
 mystery results files that cannot be reproduced,
@@ -76,13 +76,13 @@ and what you're planning to do next!
 > 
 > --Mark T. Holder
 
-In order to version control a project, you generally need two things: 
+To version control a project, you generally need two things: 
 a *version control system* and a *repository hosting service*. 
-The version control system is the software that is responsible 
+The version control system is the software responsible 
 for tracking changes, sharing changes you make with others, 
-obtaining changes others have made, and resolving conflicting edits.
+obtaining changes from others, and resolving conflicting edits.
 The repository hosting service is responsible for storing a copy 
-of the version controlled project online (a *repository*), 
+of the version-controlled project online (a *repository*), 
 where you and your collaborators can access it remotely, 
 discuss issues and bugs, and distribute your final product. 
 For both of these items, there is a wide variety of choices; 
