addressing reviewer C's comments about writing for intended audience, simplifying opening paragraphs of book

--- a/index.Rmd
+++ b/index.Rmd
@@ -43,7 +43,7 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 # R and the tidyverse
 ## Overview
 
-This textbook aims to be an approachable introduction to the world of data science. 
+This textbook aims to be an approachable introduction to the world of data science! 
 In this book, we define *data science* as the process of generating
 insight from data through reproducible and auditable processes. 
 At a high level, in this book, readers will learn how to 
@@ -128,7 +128,7 @@ Acts such as these have significantly harmed the continuity of Aboriginal langua
 
 > To learn more about Indigenous languages in Canada, check out [Canadian Geographic's article on Mapping Indigenous languages in Canada](https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada) [@walker2017].
 
-According to the 2016 census, more than 70 Aboriginal languages were reported as being spoken. Suppose we want to ask the question:
+According to the 2016 census, more than 60 Aboriginal languages were reported as being spoken. Suppose we want to ask the question:
 
 *What ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada, and how many people speak each of them?* 
 
@@ -153,15 +153,15 @@ Now that we have asked our question and identified the data we are using, we nee
 
 ## Loading a spreadsheet-like data set
 
-Almost always, the first step in data analysis is to load a data set into R. When we bring rectangular-shaped, spreadsheet-like data (think Microsoft Excel tables) into R, it is represented as a *data frame* object. In figure \@ref(fig:img-spreadsheet-vs-dataframe), we can see an R data frame is very similar to a spreadsheet where the rows are the collected observations, and the columns are the variables. 
+Almost always, the first step in data analysis is to load a data set into R. A data set is a collection of numbers or values and can come in many different forms! Tables in Microsoft Excel are an example of rectangular-shaped, spreadsheet-like data as shown in Figure \@ref(fig:img-spreadsheet-vs-dataframe).
+When we read this type of data into R, it is represented as a *data frame* object. Figure \@ref(fig:img-spreadsheet-vs-dataframe) shows an R data frame is very similar to a spreadsheet where the rows are the collected observations (e.g. students), and the columns are the characteristics of those observations (e.g. grades). 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
 knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 ```
 
-The first kind of data file that we will learn how to load into R (as a data frame) is the 
-spreadsheet-like *comma-separated values* format (`.csv` for short).
+The first kind of data file that we will learn how to load into R (as a data frame) is the *comma-separated values* format (`.csv` for short).
 These files have names ending in `.csv`, and can be opened and saved using common spreadsheet programs like Microsoft Excel and Google Sheets. 
 For example, the `.csv` file named `can_lang.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/can_lang.csv). 
 If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
@@ -188,17 +188,22 @@ it. The place we will load it from is an R package. An R package is a collection
 of functions that once loaded, can be used in addition to the built-in R package
 functions. The `read_csv` function, in particular, can be made accessible through the
 `library` function by loading the `tidyverse` package [@wickham2019tidverse]. 
-`tidyverse` contains many functions, which allow us to read, clean, wrangle and visualize
-data. 
+`tidyverse` contains many functions, which allow us to read, clean, wrangle and visualize data. 
+
+```{r load_tidyverse, message=T}
+library(tidyverse)
+```
+> **In case you want to know more (optional):** 
+> Notice that we got some extra output from R saying `Attaching packages` and `Conflicts` below our code line. These are examples of *messages* in R, which give the user more information that might be handy to know. For example, in this message, R tells us which other packages it loads when it loads the `tidyverse` package (e.g. `ggplot2`) and the version number of each package. Its also telling us there are `Conflicts`. `Conflicts` sounds bad, but R is just telling us that different functions from different packages use the same name. For example, the `dplyr` and the `stats` package both use a function called `filter`. R is going to "mask" the `filter` function from the `stats` package, meaning that it will default to the `dplyr` version of this function. Messages are not errors, so you don't always need to do something when you see a message, but you should read a message and decide for yourself. We will "suppress" messages from now on in this book so that you won't see this extra output! 
+
 
 After loading the `tidyverse` package, we can call the `read_csv` function and 
 pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the book, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
 
-```{r load_can_lang_data, warning=FALSE, message=FALSE}
-library(tidyverse)
+
+```{r load_can_lang_data, warning=F, message=F}
 read_csv("data/can_lang.csv")
 ```
-
 
 > **In case you want to know more (optional):** 
 > There is another function, which also loads csv files called `read.csv`, which is a base R function (meaning we don't need to load a package to use it). Why are we using `read_csv` instead of `read.csv`? We use the `read_csv` function from the `tidyverse` because it's faster, and it has other advantages, such as a more readable format when printing the data frame.  
