adding references to truth and recon docs, added better narrative to select, filter, and arrange functions, addressing some of rev Cs comments on errors, R messages, and explaining jargon

--- a/index.Rmd
+++ b/index.Rmd
@@ -41,7 +41,7 @@ can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst
 ```
 
 # R and the tidyverse
-## Overview
+## Preface
 
 This textbook aims to be an approachable introduction to the world of data science! 
 In this book, we define *data science* as the process of generating
@@ -71,6 +71,28 @@ and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a 
 knitr::include_graphics("img/chapter_overview.jpeg")
 ```
 
+## Overview
+
+This chapter provides an introduction to the R programming language. We will learn about some fundamental R topics and then go through an entire data analysis task! We will see how to read, clean, wrangle, and visualize some data to answer a specific question at a high level. Later in the book, we will learn each of these steps in more detail, but let's jump in now to see how much we can do with data science!
+
+## Chapter Learning Objectives
+
+By the end of the chapter, readers will be able to:
+
+- load the `tidyverse` package into R
+- create new variables and objects in R using the assignment symbol
+- use the help and documentation tools in R
+- match the names of the following functions from the `tidyverse` package to their documentation descriptions: 
+    - `read_csv` 
+    - `select`
+    - `filter`
+    - `arrange`
+    - `slice`
+    - `ggplot`
+    - `aes`
+
+## Ask a question 
+
 The four common data science methods that are useful for answering predictive, exploratory and inferential data analysis questions covered in this book are:
 
 1. **Classification: predicting a class/category for a new observation.** This could answer a question such as whether a tumour is cancerous or benign given some tumour cell measurements?
@@ -97,25 +119,10 @@ Table: (\#tab:questions-table) Types of data analysis questions
 
 Source: [What is the question?](https://science.sciencemag.org/content/347/6228/1314) by Jeffery T. Leek, Roger D. Peng & [The Art of Data Science](https://leanpub.com/artofdatascience) by Roger Peng & Elizabeth Matsui
 
-## Chapter Learning Objectives
 
-By the end of the chapter, readers will be able to:
+## Canadian languages data set question
 
-- load the `tidyverse` package into R
-- create new variables and objects in R using the assignment symbol
-- use the help and documentation tools in R
-- match the names of the following functions from the `tidyverse` package to their documentation descriptions: 
-    - `read_csv` 
-    - `select`
-    - `filter`
-    - `arrange`
-    - `slice`
-    - `ggplot`
-    - `aes`
-
-## Ask a question 
-Where to begin? As outlined in Figure \@ref(fig:img-chapter-overview), we will start
-with a question we want to answer. Generally, we need some context to frame our question. 
+Now that we've learned about different types of questions. We need some context with which to frame our question. 
 
 Before the arrival of colonists, Indigenous peoples lived in Canada with their
 own cultures and many different languages. Many Aboriginal languages are unique
@@ -126,15 +133,16 @@ generations of children were not allowed to speak their mother tongue
 schools. Colonizers also renamed places they had "discovered" [@wilson2018]. 
 Acts such as these have significantly harmed the continuity of Aboriginal languages in Canada, and some languages are considered "endangered" as few people report speaking them. 
 
-> To learn more about Indigenous languages in Canada, check out [Canadian Geographic's article on Mapping Indigenous languages in Canada](https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada) [@walker2017].
+> To learn more, please see Canadian Geographic's article on [Mapping Indigenous languages in Canada](https://www.canadiangeographic.ca/article/mapping-indigenous-languages-canada) [@walker2017], [They Came for the Children: Canada, Aboriginal peoples, and
+residential schools](http://publications.gc.ca/site/archivee-archived.html?url=http://publications.gc.ca/collections/collection_2012/cvrc-trcc/IR4-4-2012-eng.pdf) [@children2012] and the Truth and Reconciliation Commission of Canada's [Calls to Action](http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf) [@calls2015].
 
 According to the 2016 census, more than 60 Aboriginal languages were reported as being spoken. Suppose we want to ask the question:
 
 *What ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada, and how many people speak each of them?* 
 
 This question is an example of a *descriptive question* since we are summarizing 
-the characteristics of a data set without further interpretation. 
- Now that we have asked our question, the next step is collecting or identifying the data set with which we will be working. In this chapter, we will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
+the characteristics of a data set without further interpretation. To answer this question, we may want to create a table or a visualization that shows us these ten languages and their associated counts. Now that we have asked our question, the next step is collecting or identifying the data set with which we will be working. 
+ In this chapter, we will be working with a data set originally from [{canlang} R data package](https://ttimbers.github.io/canlang/) [@timbers2020canlang], which has language data collected in the 2016 Canadian census [@cancensus2016]. 
 
 In this data frame there are 214 rows (corresponding to the 214 languages recorded on the 2016 Canadian census) and 6 columns: 
 
@@ -145,6 +153,7 @@ In this data frame there are 214 rows (corresponding to the 214 languages record
 5. `most_at_work`: Total count of Canadians from the Census who reported the language as used most often at work for the population.
 6. `lang_known`: Total count of Canadians from the Census who reported knowledge of language for the population in private households.
 
+> You can find the description of this data set above provided with the [{canlang} R data package](https://ttimbers.github.io/canlang/). 
 
 > **A note about the *data* in data science!** 
 > Data science cannot be done without a deep understanding of the data and problem domain. In this book, we have simplified the data sets used in our examples to concentrate on concepts. In real life, we cannot and should not do data science without a domain expert. Alternatively, it is common to practice data science in your domain of expertise! Remember that when we work with data, it is essential to think about *how* the data were collected, which affects the conclusions we can draw. If your data are biased, then your results will be biased!
@@ -194,7 +203,7 @@ functions. The `read_csv` function, in particular, can be made accessible throug
 library(tidyverse)
 ```
 > **In case you want to know more (optional):** 
-> Notice that we got some extra output from R saying `Attaching packages` and `Conflicts` below our code line. These are examples of *messages* in R, which give the user more information that might be handy to know. For example, in this message, R tells us which other packages it loads when it loads the `tidyverse` package (e.g. `ggplot2`) and the version number of each package. Its also telling us there are `Conflicts`. `Conflicts` sounds bad, but R is just telling us that different functions from different packages use the same name. For example, the `dplyr` and the `stats` package both use a function called `filter`. R is going to "mask" the `filter` function from the `stats` package, meaning that it will default to the `dplyr` version of this function. Messages are not errors, so you don't always need to do something when you see a message, but you should read a message and decide for yourself. We will "suppress" messages from now on in this book so that you won't see this extra output! 
+> Notice that we got some extra output from R saying `Attaching packages` and `Conflicts` below our code line. These are examples of *messages* in R, which give the user more information that might be handy to know. For example, in this message, R tells us which other packages it loads when it loads the `tidyverse` package (e.g. `ggplot2`) and the version number of each package. Its also telling us there are `Conflicts`, which sounds bad, but R is just telling us that different functions from different packages use the same name. For example, the `dplyr` and the `stats` package both use a function called `filter`. R is going to "mask" the `filter` function from the `stats` package, meaning that it will default to the `dplyr` version of this function. Messages are not errors, so you don't always need to do something when you see a message, but you should read a message and decide for yourself. We will "suppress" messages from now on in this book so that you won't see this extra output! 
 
 
 After loading the `tidyverse` package, we can call the `read_csv` function and 
@@ -234,16 +243,24 @@ because we are formally telling R about this new word and giving it a value.
 Only characters and words that act as values (on `<-`'s right-hand side) 
 need to be surrounded by quotes.
 
-Object names can consist of letters, numbers, periods `.` and underscores `_`. 
-Though there are certain conventions for naming objects in R. When naming an object we
+Object names can consist of letters, numbers, periods `.` and underscores `_`. Other symbols won't work in R since they have other meanings in R. For example, 
+`+` is an addition symbol used to add numbers. If we try to assign a name with the `+` symbol to an object R will complain and we will get an error!
+
+```{r, eval = F}
+name+ <- 1
+```
+```
+Error: unexpected assignment in "name+ <-"
+```
+
+There are certain conventions for naming objects in R. When naming an object we
 suggest using only lower case letters, numbers and underscores `_` to separate the words in a name. 
-R is case sensitive, which means that `Letter` and `letter` would be two different 
+R is case sensitive, which means that `Letter` and `letter` would be two different
 objects in R. 
 You should also try to give your objects meaningful names.
 For instance, you *can* name a data frame `x`. 
 However, using more meaningful terms, such as `language_data`, will help you remember what each name in your code represents. 
 We recommend following the Tidyverse naming conventions outlined in the [Tidyverse Style Guide](https://principles.tidyverse.org/names-attribute.html#universal-names) [@tidyversestyleguide]. 
-
 Let's now use the assignment symbol to give the name `can_lang` 
 to the 2016 Canadian census language data frame that we get from `read_csv`. 
 
@@ -267,7 +284,9 @@ can_lang
 
 ## Creating subsets of data frames with `filter` & `select`
 
-Now, we are going to learn how to obtain subsets of data from a data frame in R using two other `tidyverse` functions: `select` and `filter`. The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values.
+Now that we've loaded our data into R, we can start wrangling the data to answer our question, *what ten Aboriginal languages were most often reported in 2016 as mother tongues in Canada, and how many people speak each of them?* To answer this question, we can construct a table with the ten Aboriginal languages that have highest counts in the `mother_tongue` column. 
+
+The `select` and `filter` functions from the `tidyverse` package will help us here. The `select` function allows you to create a subset of the columns of a data frame, while the `filter` function allows you to obtain a subset of the rows with specific values. Therefore, we can `filter` rows for only the Aboriginal languages in the data set and then use `select` to obtain only the columns we want to include in our table.
 
 Let's take a look at the language data collected in the 2016 Canadian census again to familiarize ourselves with it. We will do this by printing the data we loaded earlier in the chapter to the screen. 
 ```{r print_data_again}
@@ -315,6 +334,8 @@ selected_lang
 > Note: we didn't actually *need* to `select` the columns in our data frame before moving on to the next step! However, `select` allows us to display only the columns in the data frame we want and can make it easier for us to view the data especially if we have a large data frame with lots of columns. 
 
 ### Using `arrange` to order and `slice` to select rows by index number
+
+We have used `filter` and `select` to obtain a table with only the Aboriginal languages in the data set and their associated counts. However, we want to know the **ten** languages that are spoken most often. As a next step, we could order the `mother_tongue` column from greatest to least and then select only the top ten rows. This is where the `arrange` and `slice` functions come to the rescue! 
 
 The  `arrange` function allows us to order the rows of a data frame by the values of a selected column. We need to pass the data frame, and the variable to order by in the first two arguments of this function. Since we want to choose the ten Aboriginal languages most often reported as a mother tongue language, we will use the `arrange` function to order the rows in our `selected_lang` data frame by the `mother_tongue` column. We want to order the rows in descending order (from largest to smallest) so we include `desc` before the column name `mother_tongue` to sort in descending order. 
 
