--- a/references.bib
+++ b/references.bib
@@ -153,3 +153,19 @@
     note = {[Online; accessed May 11, 2021]},
     url = {https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg}
 }
+
+
+@book{children2012,
+  title={They came for the children : Canada, aboriginal peoples, and the residential schools},
+  author={Canada. Truth and Reconciliation Commission of Canada},
+  year={2012},
+  publisher={Ottawa - Ontario : Truth and Reconciliation Commission of Canada}
+}
+
+@misc{calls2015,
+  title={Calls to Action},
+  author={Canada. Truth and Reconciliation Commission of Canada},
+  year={2015},
+  url={http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf}
+}
+
