explaining logical statements as per Rev C comments

--- a/index.Rmd
+++ b/index.Rmd
@@ -305,12 +305,15 @@ the subset of rows with desired values from a data frame. Our first
 argument is the name of the data frame object, `can_lang`. The second argument
 is a logical statement to use when filtering the rows. We are interested 
 in looking at the languages in the "Aboriginal languages" higher-level category 
-in this data set. To filter only those rows, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. 
+in this data set and to filter only those rows, we use the *equivalency operator* `==` to compare the values of the `category` column with the value `"Aboriginal languages"`. 
 Similar to when we loaded the data file and put quotes around the filename, 
 here we need to put quotes around `"Aboriginal languages"`. Using quotes tells R
 that this is a character value and not one of the special words that make up R
 programming language, nor one of the names 
 we have given to data frames in the code we have already written.
+
+
+> What's a logical statement? A logical statement is a sentence that is `TRUE` or `FALSE`. For example, `1 > 2` is  logical statement. If you type this statement into R, you are asking R "Is the number 1 greater than 2?" and you will get `FALSE` as your answer. 
 
 With these arguments, `filter` returns a data frame that has all the columns of the input data frame but only the rows we asked for in our logical filter statement. 
 
@@ -358,11 +361,11 @@ Creating effective data visualizations is an essential piece to any data analysi
 
 ### Using `ggplot` to create a bar plot
 
-In our data set, we can see that our variables--- language (`language`) and mother tongue (`mother_tongue`) ---are in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this book: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
+In our data set, we can see that `language` and `mother_tongue` are in separate columns. In addition, there is a single row (or observation) for each language. The data are, therefore, in what we call a *tidy data* format. Tidy data is a fundamental concept and will be a significant focus in the remainder of this book: many of the functions from `tidyverse` require tidy data, including the `ggplot` function that we will use shortly for our visualization. We will formally introduce this concept in chapter 3.
 
 
 We will make a bar plot to visualize our data. A bar plot is a chart where the heights of the bars represent certain values, like counts or proportions. We will make a bar plot using the `most_at_home` and `language` columns from our `ten_lang` data frame.
-To create a bar plot of these two variables using the `ggplot` function, we would the following: 
+To create a bar plot of these two variables using the `ggplot` function, we would do the following: 
 
 ```{r img-ggplot, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Creating a bar plot with the ggplot function", out.width="1100", fig.retina = 2}
 knitr::include_graphics("img/ggplot_function.jpeg")
