--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -788,7 +788,7 @@ data frame with one character column for city and one numeric column for
 population (like a spreadsheet).
 Additionally, the populations contain commas (not useful for programmatically
 dealing with numbers), and some even contain a line break character at the end
-(`\n`). In the next chapter, we will learn more about how to *wrangle* data
+(`\n`). In chapter \@ref(wrangling), we will learn more about how to *wrangle* data
 such as this into a more useful format for data analysis using R.
 
 ### Using an API
